--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,5 @@
 html, body, #root {
   height: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 body {
@@ -16,6 +14,7 @@ body {
   flex-direction: column;
   flex-grow: 1;
 }
+
 .search-wrapper {
   position: relative;
   width: 300px;
@@ -27,7 +26,6 @@ body {
   top: 50%;
   transform: translateY(-50%);
   color: white;
-  pointer-events: none;
   font-size: 20px;
 }
 
@@ -52,7 +50,6 @@ body {
   background: none;
   border: none;
   color: white;
-  cursor: pointer;
   font-size: 20px;
   padding: 0;
   display: flex;
@@ -63,7 +60,6 @@ body {
 .no-games {
   color: white;
   font-size: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .app-header {
@@ -76,6 +72,7 @@ body {
   box-sizing: border-box;
   height: 60px;
   padding: 0 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .results {
@@ -121,7 +118,6 @@ h1 {
   font-size: 14px;
   margin: 0;
   font-weight: normal;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 h1:hover{
@@ -136,17 +132,16 @@ h1:hover{
 
 .games-grid {
   flex-grow: 1;
-  min-height: calc(100vh - 220px); /* Atimkite header ir footer aukštį */
+  min-height: calc(100vh - 220px);
   margin-left: 200px;
   margin-right: 200px;
   padding: 30px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  align-content: start; /* Kad kortelės liktų viršuje */
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-/* Kortelė */
 .game-card {
   width: 100%;
   border: 2px solid #5073ff;
@@ -161,11 +156,11 @@ h1:hover{
   position: relative;
   transition: transform 0.3s ease;
   background-color: #1e1e2f;
-  padding-top: 10px;
 }
 
 .game-card:hover .game-info {
   transform: translateY(-110px);
+  padding-top: 10px;
 }
 
 .add-to-cart-btn {
@@ -180,8 +175,6 @@ h1:hover{
   margin: 0 15px 7px 15px;
   font-size: 14px;
   font-weight: bold;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  cursor: pointer;
   transition: all 0.3s ease;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -203,7 +196,6 @@ h1:hover{
   margin: 0 15px 7px 15px;
   font-size: 14px;
   font-weight: bold;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   cursor: pointer;
   transition: all 0.3s ease;
   text-transform: uppercase;
@@ -216,14 +208,13 @@ h1:hover{
 }
 
 .game-card:hover .add-to-cart-btn {
-  bottom: 60px; /* Pirmas mygtukas virš antro */
+  bottom: 60px;
 }
 
 .game-card:hover .options-btn {
-  bottom: 7px; /* Antras mygtukas apačioje */
+  bottom: 7px;
 }
 
-/* Nuotrauka */
 .game-image {
   width: 100%;
   height: 350px;
@@ -231,21 +222,17 @@ h1:hover{
   margin-bottom: 10px;
 }
 
-/* Pavadinimas */
 .game-title {
   font-size: 14px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: normal;
   margin: 0 0 8px 15px;
 }
 
-/* Kaina */
 .game-price {
   font-weight: bold;
   margin: 0;
 }
 
-/* Kai neranda žaidimų */
 .no-games {
   color: white;
   font-size: 18px;
@@ -257,21 +244,18 @@ h1:hover{
   letter-spacing: 1px;
   color: #04c4bd;
   margin: 0 10px 10px 15px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .game-original-price {
   font-size: 14px;
   opacity: 0.7;
   margin: 0 5px 0 15px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .game-discount-badge {
   color: #00d936;
   font-size: 14px;
   font-weight: bold;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .game-discounted-price-bottom {
@@ -279,7 +263,6 @@ h1:hover{
   font-weight: bold;
   color: white;
   margin: 0 5px 7px 15px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .game-normal-price {
@@ -287,7 +270,6 @@ h1:hover{
   font-weight: bold;
   color: white;
   margin: 0 5px 7px 15px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .game-cashback {
@@ -296,11 +278,9 @@ h1:hover{
   letter-spacing: 1px;
   color: #00d936;
   margin: 0 10px 15px 15px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .likes {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   align-items: center;
   gap: 6px;
@@ -322,13 +302,12 @@ h1:hover{
 
 .cashback-badge {
   position: absolute;
-  top: -80px;
+  top: -120px;
   background-color: rgb(70, 233, 255);
   color: rgb(37, 0, 112);
   font-size: 12px;
   font-weight: bold;
   padding: 3px 10px 5px 5px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   letter-spacing: 0.05em;
   display: flex;
   align-items: center;
@@ -336,6 +315,35 @@ h1:hover{
   gap: 6px;  
 }
 
+.platform-info {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  position: absolute;
+  top: -42px;
+  background-color: rgba(30, 30, 47, 0.6);
+  padding: 5px 10px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  color: white;
+  z-index: 5;
+  border-radius: 4px 4px 0 0;
+}
+
+.game-card:hover .platform-info {
+  top: -29px;
+}
+
+.platform-logo {
+  height: 18px;
+  object-fit: contain;
+}
+
+.platform-name {
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+}
 
 footer {
   background-color: #210047;
